# p1anet

./: .gitignore  Cargo.toml  Dockerfile  rustfmt.toml
.github/workflows/: docker.yml
deploy/: compose.yml
src/: main.rs
src/config/: mod.rs
src/config/auth/: github.rs  mod.rs
src/config/axum/: mod.rs
src/config/ctfshow/: mod.rs
src/database/: migration.rs  mod.rs
src/logger/: mod.rs
src/model/record/: mod.rs
src/model/user/: mod.rs
src/selenium/: mod.rs
src/util/: jwt.rs
src/web/: docs.rs  mod.rs  traits.rs
src/web/api/: mod.rs
src/web/api/auth/: mod.rs
src/web/api/ctfshow/: mod.rs
src/web/middleware/: auth.rs  frontend.rs
src/web/model/: auth.rs  ctfshow.rs  mod.rs
src/web/router/: mod.rs
src/web/router/auth/: mod.rs
src/web/router/ctfshow/: mod.rs
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  style.css
web/src/components/: Navbar.tsx
web/src/layouts/: Default.tsx
web/src/models/: record.ts  user.ts
web/src/pages/: callback.tsx  ctfshow.tsx  index.tsx
web/src/routers/: index.ts
web/src/stores/: auth.ts
web/src/utils/: alova.ts
